2003-07-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7alpha3 (for form and twisted.names
	updates mentioned below).

2003-07-19  Ying Li <cyli@ai.mit.edu>

	* twisted/web/woven/form.py:  Changed form widgets so that if the 
	template already has the widget coded, merges the template widget 
	with the model widget (sets default values, etc.).  

	* twisted/web/woven/form.py, twisted/python/formmethod.py:  Can 
	format layout of checkgroups and radiogroups into tables, rows, or
	columns.
	
	* twisted/web/woven/form.py, twisted/python/formmethod.py: Added 
	file input widget (unable to retrieve filename or file type - have 
	to ask for that separately).
	
2003-07-19  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/protocols/dns.py, twisted/names: Twisted Names can now
	return the `authoritative' bit. All of the resolvers in
	twisted/names/authority.py now set it.

2003-07-17  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7alpha2 (Debian packages should be 
	correct	now)

2003-07-17  Dave Peticolas  <dave@krondo.com>

	* doc/howto/components.html: methods in interfaces do have self
	parameters

2003-07-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/web/client.py: Added a `timeout' keyword argument to
	getPage; If the web page takes longer than `timeout' to fetch,
	defer.TimeoutError is errbacked.

	* twisted/web/server.py, twisted/protocols/http.py: add `timeout'
	argument to HTTPFactory and Site to specify how long to allow
	connections to sit without communication before disconnecting
	them.

2003-07-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.7alpha1.

2003-07-17  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/smtp.py: Address class changed to provide a
	default domain for addresses missing a domain part.

2003-07-16  Christopher Armstrong  <radix@twistedmatrix.com>
